[package]
name = "ouchlock"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = {version = "0.6.20", features = ["multipart"] }
shuttle-axum = "0.35.0"
shuttle-runtime = "0.35.0"
tokio = "1.28.2"
tracing = "0.1.40"
serde = "1.0.193"
regex = "1.10.2"
base64 = "0.21.5"
cookie = "0.18.0"
serde_json = "1.0.108"
reqwest = "0.11.22"
tower-http = { version = "0.4.0", features = ["fs"] }
image = "0.24.7"
itertools = "0.12.0"
